# claude-halo

./: .gitignore  README.md  demo.html
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build.yml
docs/: index.html
hooks/: hooks.json
mac/.claude-plugin/: plugin.json
mac/hooks/: hooks.json
mac/scripts/: halo-hook.sh  launch-halo.sh
mac/src/: app.js
mac/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
mac/src-tauri/src/: main.rs  platform.rs
scripts/: halo-hook.ps1  launch-halo.ps1  shutdown-signal.ps1  statusline.ps1
src/: app.js  halo.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  platform_macos.rs  platform_windows.rs
win/.claude-plugin/: plugin.json
win/scripts/: halo-hook.ps1  launch-halo.ps1  statusline.ps1
win/src-tauri/: Cargo.toml  tauri.conf.json
win/src-tauri/src/: main.rs  platform.rs
