[package]
name = "claude-halo"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"
core-graphics = "0.23"
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
